--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -48,6 +48,9 @@ jobs:
           VITE_PUBLIC_KEY: ${{ secrets.VITE_PUBLIC_KEY }}
         run: npm run build
 
+      - name: Copy 404.html to build directory
+        run: cp public/404.html dist/
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
